# analys01

./: ImplementationGuidelinesforUserStoriesEN.md  Pasted-ValueError-Input-y-contains-NaN-Traceback-File-home-runner-workspace-pythonlibs-lib-python3--1731203681808.txt  data.db  generate_test_data.py  main.py  pyproject.toml  replit_zip_error_log.txt  test_data.csv
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.streamlit/: config.toml
.upm/: store.json
logs/: app.log.2024-11-11  app.log.2024-11-12
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: data_analysis_report_20241111_014744.xlsx  report_20241112_151824.xlsx  report_20241113_135047.xlsx  report_20241113_135246.xlsx  report_20241113_135355.xlsx
tests/: test_data_analyzer.py  test_data_processor.py
utils/: data_analyzer.py  data_loader.py  data_processor.py  data_visualizer.py  database.py  logging_config.py  overview_tab.py  predictor.py  report_generator.py  state_manager.py  tab_handlers.py
utils/tabs/: analysis_tab.py
